# streamlit-multipage

./: pyproject.toml  setup.cfg
src/streamlit_multipage/: __init__.py  multipage.py
